[FB] Gnome theme | fix doesn't visible addon icons

--- a/browser/base/content/browser-floorp.css
+++ b/browser/base/content/browser-floorp.css
@@ -550,3 +550,13 @@ toolbar #workspace-button:not([disabled="true"], [checked], [open], :active):hov
 #QRCodeGeneratePageAction-image {
   list-style-image: url("chrome://browser/skin/floorp-share.svg");
 }
+
+@media (min-resolution: 1.1dppx){
+ toolbar[brighttext] .webextension-browser-action {
+   list-style-image: var(--webextension-toolbar-image-2x-light, inherit) !important;
+ }
+}
+
+#new-tab-button > .toolbarbutton-icon {
+  width: 22px !important;
+}
